--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "sass": "^1.83.0"
   },
   "devDependencies": {
